prometheus-metric-storage/tests/compile_fail/duplicate_field_label.stderr
error: duplicate label
 --> tests/compile_fail/duplicate_field_label.rs:6:31
  |
6 |     #[metric(labels("status", "status"))]
  |                               ^^^^^^^^
